[metadata]
name = pan-chainguard
version = attr: pan_chainguard.__version__
author = Palo Alto Networks, Inc.
author_email = devrel@paloaltonetworks.com
description = Preload Trusted CA Intermediate Certificate Chains on PAN-OS
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/PaloAltoNetworks/pan-chainguard
license = ISC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)

[options]
packages =
    pan_chainguard
scripts =
    bin/fling.py
    bin/sprocket.py
    bin/chain.py
    bin/guard.py
    bin/cert-fingerprints.sh
install_requires =
    aiohttp>=3.9.0
    pan-python>=0.25.0
python_requires = >=3.9
